👌 style - code review

--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -4,7 +4,7 @@
             Banner com vídeo
         {%- else if page.banner.image -%}
             <!-- Imagem de Fundo do Banner -->
-            <img class="bg-img" src="{{page.banner.image}}" alt="Banner" oncontextmenu="return false;"/>
+            <img class="background-image" src="{{page.banner.image}}" alt="Banner" oncontextmenu="return false;"/>
             <!-- Conteúdo do Banner -->
             <div class="banner-content">
                 <!-- Banner Title -->
